prevent long words from causing horizontal scroll on mobile. Fixed for headers and links that shouldnt break

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -10,7 +10,6 @@ body {
     margin: 0;
     padding: 0;
     color: $off-black;
-    word-break: break-all;
 }
 
 ul {
@@ -18,6 +17,10 @@ ul {
     padding: 0;
     margin: 0;
     text-align: center;
+}
+
+p {
+    word-break: break-all;
 }
 
 .wrap {
@@ -40,7 +43,6 @@ strong {
     text-decoration: none;
     color: $text-color;
     border-bottom: 1px dotted #ccc;
-
     &:hover,
     &:visited:hover {
         text-decoration: none;
@@ -62,16 +64,14 @@ strong {
     text-decoration: none;
     transition: color 0.1s linear;
     vertical-align: bottom;
-
     img {
         text-align: center;
         margin: 0 auto;
         vertical-align: bottom;
         display: block; //required to remove a weird margin on the bottom of img when nested within an anchor
     }
-
     &:hover {
-        background: rgba(0,0,0,0.2);
+        background: rgba(0, 0, 0, 0.2);
         color: white;
         transition: all 0.15s linear;
     }
@@ -83,11 +83,9 @@ strong {
 a {
     color: $link-color;
     text-decoration: none;
-
     &:visited {
         color: $link-color;
     }
-
     &:hover {
         color: $text-color;
         text-decoration: underline;
@@ -111,7 +109,6 @@ a {
 .icon {
     height: $icon-len;
     width: $icon-len;
-
     img {
         height: $icon-len;
         width: $icon-len;
@@ -127,29 +124,27 @@ a {
     -webkit-animation-name: welcome;
     -webkit-animation-duration: 0.9s;
 }
+
 @-webkit-keyframes welcome {
     from {
         -webkit-transform: scale(0);
         opacity: 0;
     }
-
     50% {
         -webkit-transform: scale(0);
         opacity: 0;
     }
-
     82.5% {
         -webkit-transform: scale(1.03);
         -webkit-animation-timing-function: ease-out;
         opacity: 1;
     }
-
     to {
         -webkit-transform: scale(1);
     }
 }
 
-#mc_embed_signup{
-    padding:5px;
+#mc_embed_signup {
+    padding: 5px;
     box-sizing: border-box;
 }
